--- a/tests/verbs/mm2/svr/README
+++ b/tests/verbs/mm2/svr/README
@@ -1,6 +1,6 @@
 [ Thu Feb 26 15:15:24 PST 2015 ] stan
 
-KFI/Infiniband provider test: server side.
+KFI/verbs provider test: server side.
 	Pass multiple messages with post_depth,
 	specified msg len in bytes.
 	private data checking
