Fix compilation of verbs provider with ofed 3.12-1
This commit works around the multiple definition errors and allows compilation on RHEL 6.6 without
modifying the installed headers as described in the README.

The correct fix for this is to modify the makefiles to properly depend on the compat-rdma kernel
modules/symbols. I can't figure this out however and the only apparent documentation (OFED_tips.txt
section 4) is out of date and wrong.

Updated the TODO and README to catpure this info.

Signed-off-by: pmmccorm <patrick.m.mccormick@intel.com>

--- a/TODO
+++ b/TODO
@@ -14,3 +14,10 @@
 
 5) Complete the verbs provider such that Infiniband & iWARP devices supported.
 
+6) Fix makefiles. Both the kfi and provider makefiles should be made to properly
+   depend on compat-rdma (when available, if not just use system's kernel/IB stack).
+   I think the compat-rdma kernel modules have in mind some sort of scheme where
+   a dependent module includes config.mk in the Makefile, and then includes one
+   or more of the auto-generated headers to pick the right compat defines.
+   However this does not work. Section 4 of the OFED_tips.txt which talks about
+   this is outdated and/or incorrect. Perhaps a bug needs to be filed.
